--- a/app.json
+++ b/app.json
@@ -14,6 +14,6 @@
     },
     "ignoreMoment": true,
     "maxChunkSize": 300000,
-    "devtool": "eval-cheap-source-map",
+    "devtool": false,
     "port": 3000
 }
